added result page, history and bookmarking

--- a/src/web/.env
+++ b/src/web/.env
@@ -1,4 +1,4 @@
 JWT_SECRET=s3#V!nE9@zPq4^rLwA1$TxG*Kd8_MbF2?UhO6%JyC0Z+RtQ5=Xp
 MONGO_URL=mongodb://localhost:27017
-COLAB_URL=localhost:5001/predict
+COLAB_URL=http://localhost:5001/predict
 PORT=3001
