--- a/src/web/package.json
+++ b/src/web/package.json
@@ -9,7 +9,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
-    "dev": "concurrently \"npm run server\" \"npm start\""
+    "dev": "concurrently \"npm run server\" \"PORT=3000 npm start\""
   },
   "dependencies": {
     "bn.js": "^5.2.1",
@@ -19,6 +19,7 @@
     "elliptic": "^6.5.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.263.1",
     "mongodb": "^5.6.0",
     "multer": "^1.4.5-lts.1",
